styles: fixes in workspace dark mode (#4440)
* styles: fixes in workspace dark mode

* updated the requested changes

--- a/frontend/src/_styles/theme.scss
+++ b/frontend/src/_styles/theme.scss
@@ -5194,15 +5194,13 @@ div#driver-page-overlay {
   .org-avatar {
     display: block;
   }
-
   .org-avatar:hover {
     .avatar {
       background: #fcfcfc no-repeat center/cover;
     }
-
     .arrow-container {
       svg {
-        filter: invert(48%) sepia(6%) saturate(6%) hue-rotate(315deg) brightness(103%) contrast(96%);
+        filter: invert(35%) sepia(17%) saturate(238%) hue-rotate(153deg) brightness(94%) contrast(89%);
       }
     }
   }
@@ -5217,7 +5215,7 @@ div#driver-page-overlay {
       height: 30px;
       width: 30px;
       padding: 0px 0px;
-      filter: invert(84%) sepia(13%) saturate(11%) hue-rotate(352deg) brightness(90%) contrast(91%);
+      filter: invert(50%) sepia(13%) saturate(208%) hue-rotate(153deg) brightness(99%) contrast(86%);
     }
   }
 
@@ -6813,3 +6811,11 @@ tbody {
   height: calc(100vh - 1.25rem - 48px);
   min-height : 500px;
 } 
+.theme-dark{
+  .org-avatar:hover{
+    .avatar{
+      background: #10141A no-repeat center/cover ;
+    }
+  }
+  
+}
